working LeNet-5 impl. added connectivity masking and gradient clipping for expolding grads. later may cause issue in future

--- a/apps/resnet20/CMakeLists.txt
+++ b/apps/resnet20/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Define app name
-set(TARGET_NAME perceptron)
+set(TARGET_NAME resnet20)
 
 # Collect application sources
 file(GLOB SOURCES CONFIGURE_DEPENDS
