--- a/dnn/CMakeLists.txt
+++ b/dnn/CMakeLists.txt
@@ -32,9 +32,19 @@ target_sources(${TARGET_NAME} PRIVATE ${HEADERS})
 # Link CUDA runtime for device code support
 target_link_libraries(${TARGET_NAME} PUBLIC 
     CUDA::cudart
-    "${CUDAToolkit_LIBRARY_DIR}/cudnn.lib"
-    "${CUDAToolkit_LIBRARY_DIR}/cublas.lib"
 )
+
+if(DEFINED USE_CUDNN AND USE_CUDNN)
+    target_link_libraries(${TARGET_NAME} PUBLIC 
+        "${CUDAToolkit_LIBRARY_DIR}/cudnn.lib"
+        "${CUDAToolkit_LIBRARY_DIR}/cublas.lib"
+    )
+endif()
+
+# Enable cuDNN
+if(USE_CUDNN)
+    target_compile_definitions(dnn PUBLIC ENABLE_CUDNN)
+endif()
 
 # Enable separable compilation for mixed CUDA modules and position independent code
 set_target_properties(${TARGET_NAME} PROPERTIES
