Add host-multi application and update CMakeLists and lenet5 main
- Added new host-multi application with CMakeLists, NVMeLoader, and main.cpp.
- Updated CMakeLists.txt and lenet5/main.cpp.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,3 +60,4 @@ add_subdirectory(tests)
 add_subdirectory(apps/lenet5)
 add_subdirectory(apps/perceptron)
 add_subdirectory(apps/resnet20)
+add_subdirectory(apps/host-multi)
