feat: Implement comprehensive RAG system
Add RAGModel, RetrieverLayer, DocumentStore for retrieval-augmented generation
Implement joint training, vector search, text processing, and end-to-end pipelines
Add comprehensive documentation and RAG demo with knowledge base management

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,7 @@ add_subdirectory(apps/lenet5)
 add_subdirectory(apps/perceptron)
 add_subdirectory(apps/resnet20)
 add_subdirectory(apps/gpt2)
+add_subdirectory(apps/rag)
 if (NOT UNIX)
     add_subdirectory(apps/host-multi)
 endif()
